Updating Notebook1.ipynb

--- a/Notebook1.ipynb
+++ b/Notebook1.ipynb
@@ -1,9 +1,295 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d4b55131-9ee1-4484-88ba-efab42eb676b",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e6e71def-9bc7-4a36-b9a7-ecca502c9eec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd \n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "479b5a66-fa4b-4d4a-9c67-d080668542b2",
+   "metadata": {},
+   "source": [
+    "# Uploading and Cleaning Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5af5ddea-5822-4127-b4e5-bf6051e138e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_data = pd.read_csv('student_data.csv', sep = ';' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a99fbc8d-1172-4053-8325-345e6befdfdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Marital status', 'Application mode', 'Application order', 'Course',\n",
+      "       'Daytime/evening attendance\\t', 'Previous qualification',\n",
+      "       'Previous qualification (grade)', 'Nacionality',\n",
+      "       'Mother's qualification', 'Father's qualification',\n",
+      "       'Mother's occupation', 'Father's occupation', 'Admission grade',\n",
+      "       'Displaced', 'Educational special needs', 'Debtor',\n",
+      "       'Tuition fees up to date', 'Gender', 'Scholarship holder',\n",
+      "       'Age at enrollment', 'International',\n",
+      "       'Curricular units 1st sem (credited)',\n",
+      "       'Curricular units 1st sem (enrolled)',\n",
+      "       'Curricular units 1st sem (evaluations)',\n",
+      "       'Curricular units 1st sem (approved)',\n",
+      "       'Curricular units 1st sem (grade)',\n",
+      "       'Curricular units 1st sem (without evaluations)',\n",
+      "       'Curricular units 2nd sem (credited)',\n",
+      "       'Curricular units 2nd sem (enrolled)',\n",
+      "       'Curricular units 2nd sem (evaluations)',\n",
+      "       'Curricular units 2nd sem (approved)',\n",
+      "       'Curricular units 2nd sem (grade)',\n",
+      "       'Curricular units 2nd sem (without evaluations)', 'Unemployment rate',\n",
+      "       'Inflation rate', 'GDP', 'Target'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(student_data.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "391ad844-e5ba-4e60-b2bf-60bde35d2bef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We are going to do an EDA on age at enrollment, debtor (whether the student is going into debt) and admission grade. \n",
+    "# We will then examine their relationship to our target variable (whether the student dropped out or graduated).\n",
+    "\n",
+    "clean_sd = student_data[['Previous qualification (grade)','Debtor', 'Age at enrollment', 'Admission grade', 'Target', 'Tuition fees up to date']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6d26223-f15d-4d5f-8d5f-b470fc70d096",
+   "metadata": {},
+   "source": [
+    "Previous qualification (grade) & Admission grade is from a scale of 0 - 200\n",
+    "\n",
+    "\n",
+    "\n",
+    "Debtor = 1 means that yes they going into debt\n",
+    "\n",
+    "\n",
+    "\n",
+    "Tuition fees up to date = 1 means that yes they are up to date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f729152d-ea4b-44d8-b1fc-6725c7c3d249",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Previous qualification (grade)</th>\n",
+       "      <th>Debtor</th>\n",
+       "      <th>Age at enrollment</th>\n",
+       "      <th>Admission grade</th>\n",
+       "      <th>Target</th>\n",
+       "      <th>Tuition fees up to date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>122.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>127.3</td>\n",
+       "      <td>Dropout</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>160.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>142.5</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>122.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>124.8</td>\n",
+       "      <td>Dropout</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>122.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>119.6</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>141.5</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4419</th>\n",
+       "      <td>125.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>122.2</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4420</th>\n",
+       "      <td>120.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>Dropout</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4421</th>\n",
+       "      <td>154.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>149.5</td>\n",
+       "      <td>Dropout</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4422</th>\n",
+       "      <td>180.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>153.8</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4423</th>\n",
+       "      <td>152.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4424 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Previous qualification (grade)  Debtor  Age at enrollment  \\\n",
+       "0                              122.0       0                 20   \n",
+       "1                              160.0       0                 19   \n",
+       "2                              122.0       0                 19   \n",
+       "3                              122.0       0                 20   \n",
+       "4                              100.0       0                 45   \n",
+       "...                              ...     ...                ...   \n",
+       "4419                           125.0       0                 19   \n",
+       "4420                           120.0       1                 18   \n",
+       "4421                           154.0       0                 30   \n",
+       "4422                           180.0       0                 20   \n",
+       "4423                           152.0       0                 22   \n",
+       "\n",
+       "      Admission grade    Target  Tuition fees up to date  \n",
+       "0               127.3   Dropout                        1  \n",
+       "1               142.5  Graduate                        0  \n",
+       "2               124.8   Dropout                        0  \n",
+       "3               119.6  Graduate                        1  \n",
+       "4               141.5  Graduate                        1  \n",
+       "...               ...       ...                      ...  \n",
+       "4419            122.2  Graduate                        1  \n",
+       "4420            119.0   Dropout                        0  \n",
+       "4421            149.5   Dropout                        1  \n",
+       "4422            153.8  Graduate                        1  \n",
+       "4423            152.0  Graduate                        1  \n",
+       "\n",
+       "[4424 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_sd"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4b55131-9ee1-4484-88ba-efab42eb676b",
+   "id": "9c552870-9c80-486f-b618-c7c1155257df",
    "metadata": {},
    "outputs": [],
    "source": []
