--- a/Notebook1.ipynb
+++ b/Notebook1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "e6e71def-9bc7-4a36-b9a7-ecca502c9eec",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,11 @@
     "import pandas as pd \n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "# From our Data Directory\n",
+    "from pathlib import Path\n",
+    "data_dir = Path('data')"
    ]
   },
   {
@@ -31,12 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "5af5ddea-5822-4127-b4e5-bf6051e138e2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "student_data = pd.read_csv('student_data.csv', sep = ';' )"
+    "student_data = pd.read_csv('data/student_data.csv', sep = ';' )"
    ]
   },
   {
@@ -88,7 +92,8 @@
     "# We are going to do an EDA on age at enrollment, debtor (whether the student is going into debt) and admission grade. \n",
     "# We will then examine their relationship to our target variable (whether the student dropped out or graduated).\n",
     "\n",
-    "clean_sd = student_data[['Previous qualification (grade)','Debtor', 'Age at enrollment', 'Admission grade', 'Target', 'Tuition fees up to date']]"
+    "clean_sd = student_data[['Previous qualification (grade)','Debtor', 'Age at enrollment', \n",
+    "                         'Admission grade', 'Target', 'Tuition fees up to date']]"
    ]
   },
   {
