--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -13,7 +13,7 @@
    "id": "c99ddf48-6a30-45dd-be93-f537adabe030",
    "metadata": {},
    "source": [
-    "Allison Phuong-Vi Nguyen, Owen Hill, and Shrija Malla"
+    "By Allison Phuong-Vi Nguyen, Owen Hill, and Shrija Malla"
    ]
   },
   {
