--- a/Notebook1.ipynb
+++ b/Notebook1.ipynb
@@ -2057,13 +2057,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 74,
    "id": "191341b3-94b3-40a4-ad02-8e9806a7e17c",
    "metadata": {},
    "outputs": [],
    "source": [
     "elem_sl_f_grad_percent = ((elem_sl_f_count.iloc[0]) / (elem_sl_f_count.iloc[0] + elem_sl_f_count.iloc[1])) * 100\n",
-    "elem_sl_f_drop_percent = ((elem_f_count.iloc[1]) / (elem_sl_f_count.iloc[0] + elem_sl_f_count.iloc[1])) * 100\n",
+    "elem_sl_f_drop_percent = ((elem_sl_f_count.iloc[1]) / (elem_sl_f_count.iloc[0] + elem_sl_f_count.iloc[1])) * 100\n",
     "\n",
     "elem_f_grad_percent = ((elem_f_count.iloc[0]) / (elem_f_count.iloc[0] + elem_f_count.iloc[1])) * 100\n",
     "elem_f_drop_percent = ((elem_f_count.iloc[1]) / (elem_f_count.iloc[0] + elem_f_count.iloc[1])) * 100\n",
@@ -2080,7 +2080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 75,
    "id": "271ce84d-8c60-4ead-9f02-b6e407332561",
    "metadata": {},
    "outputs": [
@@ -2089,7 +2089,7 @@
      "output_type": "stream",
      "text": [
       "Students whose Fathers completed Some Level of Elementary School and Graduated: 69.15422885572139%\n",
-      "Students whose Fathers completed Some Level of Elementary School and Dropped Out: 72.4709784411277%\n",
+      "Students whose Fathers completed Some Level of Elementary School and Dropped Out: 30.845771144278604%\n",
       "\n",
       "Students whose Fathers completed Elementary School and Graduated: 57.24070450097848%\n",
       "Students whose Fathers completed Elementary School and Dropped Out: 42.759295499021526%\n",
