Updating both Notebooks

--- a/Notebook2.ipynb
+++ b/Notebook2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "e6e71def-9bc7-4a36-b9a7-ecca502c9eec",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5af5ddea-5822-4127-b4e5-bf6051e138e2",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "a99fbc8d-1172-4053-8325-345e6befdfdb",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "f729152d-ea4b-44d8-b1fc-6725c7c3d249",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "[3630 rows x 6 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "e1f296bd-5305-477d-a927-c6832874c325",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "fe396686-b017-431d-b279-2f2af77efbca",
    "metadata": {},
    "outputs": [
@@ -307,6 +307,7 @@
     "plt.title(\"Total Graduates vs Total Dropouts\")\n",
     "plt.xlabel(\"Graduate?\")\n",
     "plt.ylabel(\"Count\")\n",
+    "plt.savefig(outputs_dir / \"Total_Graduates_and_Dropouts.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -320,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "3428b54d-5b5d-4264-923e-9266497f4520",
    "metadata": {},
    "outputs": [
@@ -342,13 +343,13 @@
     "plt.title(\"Distribution of Previous Qualification\")\n",
     "plt.xlabel(\"Previous Qualification\")\n",
     "plt.ylabel(\"Count\")\n",
-    "#plt.savefig(outputs_dir / \"Distribution_of_Previous_Qualification.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.savefig(outputs_dir / \"Distribution_of_Previous_Qualification.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "88bb3e5c-f963-4789-80e3-d19ede648bdd",
    "metadata": {},
    "outputs": [
@@ -370,13 +371,13 @@
     "plt.title(\"Distribution of Admission Grade\")\n",
     "plt.xlabel(\"Admission Grade\")\n",
     "plt.ylabel(\"Count\")\n",
-    "#plt.savefig(outputs_dir / \"Distribution_of_Admission_Grade.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.savefig(outputs_dir / \"Distribution_of_Admission_Grade.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "9c552870-9c80-486f-b618-c7c1155257df",
    "metadata": {},
    "outputs": [
@@ -402,7 +403,7 @@
     "plots[1].set_xlabel(\"Graduate?\")\n",
     "plots[0].set_ylabel(\"Previous Qualification\")\n",
     "plots[1].set_ylabel(\"Admission Grade\")\n",
-    "#plt.savefig(outputs_dir / \"Boxplots.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.savefig(outputs_dir / \"Prev_Qual_Admission_Grade_Boxplots.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -416,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "1fd36151-2481-464c-907d-85160246559a",
    "metadata": {},
    "outputs": [
@@ -437,13 +438,13 @@
     "plt.title(\"Distribution of Age at Enrollment\")\n",
     "plt.xlabel(\"Age at Enrollment\")\n",
     "plt.ylabel(\"Count\")\n",
-    "#plt.savefig(outputs_dir / \"Distribution_of_Age_at_Enrollment.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.savefig(outputs_dir / \"Distribution_of_Age_at_Enrollment.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "61cc3bb1-a534-47f0-a425-2a868a26e0d6",
    "metadata": {},
    "outputs": [
@@ -464,7 +465,7 @@
     "plt.title(\"Age at Enrollment versus Target\")\n",
     "plt.xlabel(\"Graduate?\")\n",
     "plt.ylabel(\"Age at Enrollment\")\n",
-    "#plt.savefig(outputs_dir / \"Boxplot_of_Age_at_Enrollment.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.savefig(outputs_dir / \"Boxplot_of_Age_at_Enrollment.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -478,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "id": "ae50b62e-b93e-4684-a808-f5de235880ef",
    "metadata": {},
    "outputs": [
@@ -501,7 +502,7 @@
     "plt.xlabel(\"Debtor?\")\n",
     "plt.xticks([0, 1], [\"Financially Free\", \"Debtor\"])\n",
     "plt.ylabel(\"Count\")\n",
-    "#plt.savefig(outputs_dir / \"Debtor_Plot.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.savefig(outputs_dir / \"Debtor_Plot.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -515,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "id": "cadeb137-6caa-41d8-85bd-6e3ba4d4dab1",
    "metadata": {},
    "outputs": [
@@ -538,13 +539,13 @@
     "plt.xlabel(\"Tuition Fees Up to Date?\")\n",
     "plt.xticks([0, 1], [\"Behind\", \"Up to Date\"])\n",
     "plt.ylabel(\"Count\")\n",
-    "#plt.savefig(outputs_dir / \"Tuition_Fees_Plot.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.savefig(outputs_dir / \"Tuition_Fees_Plot.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "id": "80bfaa3d-7f56-46a6-92be-dbfade09807e",
    "metadata": {},
    "outputs": [
@@ -567,13 +568,13 @@
     "plt.xlabel(\"Debtor?\")\n",
     "plt.xticks([0, 1], [\"Financially Free\", \"Debtor\"])\n",
     "plt.ylabel(\"Count\")\n",
-    "#plt.savefig(outputs_dir / \"Debtor_Tuition_Fees_Plot.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.savefig(outputs_dir / \"Debtor_Tuition_Fees_Plot.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "id": "229d09af-d7f7-44a8-bd77-e5a5cea73092",
    "metadata": {},
    "outputs": [
@@ -609,13 +610,13 @@
     "plt.xlabel(\"Debtor?\")\n",
     "plt.xticks([0, 1], [\"Financially Free\", \"Debtor\"])\n",
     "plt.ylabel(\"Count\")\n",
-    "#plt.savefig(outputs_dir / \"Debtor_versus_Target.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.savefig(outputs_dir / \"Debtor_versus_Target.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "id": "42935034-9c5b-4cc4-813f-80aa8f8358dd",
    "metadata": {},
    "outputs": [
@@ -651,9 +652,17 @@
     "plt.xlabel(\"Tuition Fees Up to Date?\")\n",
     "plt.xticks([0, 1], [\"Behind\", \"Up to Date\"])\n",
     "plt.ylabel(\"Count\")\n",
-    "#plt.savefig(outputs_dir / \"Tuition_Fees_versus_Target.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.savefig(outputs_dir / \"Tuition_Fees_versus_Target.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c139fbaa-3235-4f1b-bc08-1cbae4dbcf04",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
