--- a/(title page) Final Project.ipynb
+++ b/(title page) Final Project.ipynb
@@ -34,6 +34,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bda9d04a-7969-4f4b-af78-7fa88f85ef46",
+   "metadata": {},
+   "source": [
+    "Our team retieved this dataset on early academic success from the UC Irvine Machine Learning Repository. The dataset was already cleanly converted into a csv file, allowing us to simply store it in the foler 'data/'."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2fed36cc-993e-4a40-a141-6cdd75d62646",
    "metadata": {},
    "source": [
@@ -42,10 +50,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e3b50bb9-9a3d-45c9-81e4-44610993304f",
+   "metadata": {},
+   "source": [
+    "Link to our Jupyter Book:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7c59e7dc-14d3-41a1-886a-a309d4a9a101",
    "metadata": {},
    "source": [
     "## Repository Structure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1481179-6a55-47c5-b596-642c5226f4af",
+   "metadata": {},
+   "source": [
+    "'data/:' contains the downloaded csv data file\n",
+    "\n",
+    "'outputs/:' contains the generated plots and graphs"
    ]
   },
   {
