Additional Notebook Progress

--- a/parent_analysis.ipynb
+++ b/parent_analysis.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "5afa68ff-d1bb-47c2-b2f6-be1a2a39cc44",
+   "metadata": {},
+   "source": [
+    "# Analysis of Student's Parental Factors Relationship with Dropout versus Graduation Rates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d4b55131-9ee1-4484-88ba-efab42eb676b",
    "metadata": {},
    "source": [
