--- a/student_analysis.ipynb
+++ b/student_analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "d4b55131-9ee1-4484-88ba-efab42eb676b",
    "metadata": {},
    "source": [
-    "# Imports"
+    "# Analysis of Student Factors Relationship with Dropout versus Graduation Rates"
    ]
   },
   {
