--- a/title_page.ipynb
+++ b/title_page.ipynb
@@ -5,7 +5,15 @@
    "id": "f44c90c0-0ca4-4ecf-844c-d86af5a8881f",
    "metadata": {},
    "source": [
-    "# Stat 159 Final Project: Exploratory Analysis of the Factors in Academic Success"
+    "# Stat 159 Final Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78f6562b-c76c-4d9e-830a-dccda83e08b9",
+   "metadata": {},
+   "source": [
+    "## Exploratory Analysis of the Factors in Academic Success"
    ]
   },
   {
@@ -14,6 +22,16 @@
    "metadata": {},
    "source": [
     "By Allison Phuong-Vi Nguyen, Owen Hill, and Shrija Malla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "66443f2a-4477-443e-aa9b-ba3e248b64f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Binder here"
    ]
   },
   {
