Finished Student EDA

--- a/student_eda.ipynb
+++ b/student_eda.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "df346f40-c037-4062-8bd8-d68433c2d0c6",
+   "metadata": {},
+   "source": [
+    "In this Notebook, we will be analyzing the relationship between our student factors of interest and our target variable: whether the student dropped out or graduated. We omitted all students who's target variable value was still \"Enrolled\". We first selected our columns of interest (those we felt had the best chance of having a significant impact on whether a student would graduate): Previous Qualification, Admission Grade, Age at Enrollment, Debtor, and Tuition Fees Up to Date. We then produce figures and generate plots for each student factor to visualize their relationship with our target variable. We stored these in the outputs folder of our repository. Finally, after considering our generated plots and analyzing the relationship between each student factor and graduating, we offer our conclusion."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "e6e71def-9bc7-4a36-b9a7-ecca502c9eec",
@@ -19,8 +27,6 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "\n",
-    "# From our Data Directory\n",
     "from pathlib import Path\n",
     "data_dir = Path(\"data\")\n",
     "outputs_dir = Path(\"outputs\")"
@@ -31,52 +37,13 @@
    "id": "479b5a66-fa4b-4d4a-9c67-d080668542b2",
    "metadata": {},
    "source": [
-    "# Uploading and Cleaning Data"
+    "# Loading and Cleaning Data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5af5ddea-5822-4127-b4e5-bf6051e138e2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "student_data = pd.read_csv(data_dir/\"student_data.csv\", sep = \";\" )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "a99fbc8d-1172-4053-8325-345e6befdfdb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clean_sd = student_data[['Previous qualification (grade)','Debtor', 'Age at enrollment', 'Admission grade', 'Target', 'Tuition fees up to date']]\n",
-    "\n",
-    "# Remove enrolled students\n",
-    "clean_sd = clean_sd[clean_sd[\"Target\"] != \"Enrolled\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c6d26223-f15d-4d5f-8d5f-b470fc70d096",
-   "metadata": {},
-   "source": [
-    "Previous qualification (grade) & Admission grade is from a scale of 0 - 200\n",
-    "\n",
-    "\n",
-    "\n",
-    "Debtor = 1 means that yes they going into debt\n",
-    "\n",
-    "\n",
-    "\n",
-    "Tuition fees up to date = 1 means that yes they are up to date"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "f729152d-ea4b-44d8-b1fc-6725c7c3d249",
    "metadata": {},
    "outputs": [
     {
@@ -154,102 +121,41 @@
        "      <td>Graduate</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4419</th>\n",
-       "      <td>125.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>19</td>\n",
-       "      <td>122.2</td>\n",
-       "      <td>Graduate</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4420</th>\n",
-       "      <td>120.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "      <td>119.0</td>\n",
-       "      <td>Dropout</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4421</th>\n",
-       "      <td>154.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>30</td>\n",
-       "      <td>149.5</td>\n",
-       "      <td>Dropout</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4422</th>\n",
-       "      <td>180.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>20</td>\n",
-       "      <td>153.8</td>\n",
-       "      <td>Graduate</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4423</th>\n",
-       "      <td>152.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>22</td>\n",
-       "      <td>152.0</td>\n",
-       "      <td>Graduate</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3630 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Previous qualification (grade)  Debtor  Age at enrollment  \\\n",
-       "0                              122.0       0                 20   \n",
-       "1                              160.0       0                 19   \n",
-       "2                              122.0       0                 19   \n",
-       "3                              122.0       0                 20   \n",
-       "4                              100.0       0                 45   \n",
-       "...                              ...     ...                ...   \n",
-       "4419                           125.0       0                 19   \n",
-       "4420                           120.0       1                 18   \n",
-       "4421                           154.0       0                 30   \n",
-       "4422                           180.0       0                 20   \n",
-       "4423                           152.0       0                 22   \n",
+       "   Previous qualification (grade)  Debtor  Age at enrollment  Admission grade  \\\n",
+       "0                           122.0       0                 20            127.3   \n",
+       "1                           160.0       0                 19            142.5   \n",
+       "2                           122.0       0                 19            124.8   \n",
+       "3                           122.0       0                 20            119.6   \n",
+       "4                           100.0       0                 45            141.5   \n",
        "\n",
-       "      Admission grade    Target  Tuition fees up to date  \n",
-       "0               127.3   Dropout                        1  \n",
-       "1               142.5  Graduate                        0  \n",
-       "2               124.8   Dropout                        0  \n",
-       "3               119.6  Graduate                        1  \n",
-       "4               141.5  Graduate                        1  \n",
-       "...               ...       ...                      ...  \n",
-       "4419            122.2  Graduate                        1  \n",
-       "4420            119.0   Dropout                        0  \n",
-       "4421            149.5   Dropout                        1  \n",
-       "4422            153.8  Graduate                        1  \n",
-       "4423            152.0  Graduate                        1  \n",
-       "\n",
-       "[3630 rows x 6 columns]"
+       "     Target  Tuition fees up to date  \n",
+       "0   Dropout                        1  \n",
+       "1  Graduate                        0  \n",
+       "2   Dropout                        0  \n",
+       "3  Graduate                        1  \n",
+       "4  Graduate                        1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clean_sd"
+    "# Load data\n",
+    "student_data = pd.read_csv(data_dir/\"student_data.csv\", sep = \";\" )\n",
+    "\n",
+    "# Select columns\n",
+    "clean_sd = student_data[['Previous qualification (grade)','Debtor', 'Age at enrollment', 'Admission grade', 'Target', 'Tuition fees up to date']]\n",
+    "\n",
+    "# Remove enrolled students\n",
+    "clean_sd = clean_sd[clean_sd[\"Target\"] != \"Enrolled\"]\n",
+    "clean_sd.head()"
    ]
   },
   {
@@ -262,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "e1f296bd-5305-477d-a927-c6832874c325",
    "metadata": {},
    "outputs": [
@@ -270,8 +176,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2209\n",
-      "1421\n"
+      "Total Number of Graduates: 2209\n",
+      "Total Number of Dropouts: 1421\n"
      ]
     }
    ],
@@ -279,8 +185,8 @@
     "# Graduates versus Dropouts\n",
     "total_grads = sum(clean_sd[\"Target\"] == \"Graduate\")\n",
     "total_drops = sum(clean_sd[\"Target\"] == \"Dropout\")\n",
-    "print(total_grads)\n",
-    "print(total_drops)"
+    "print(f\"Total Number of Graduates: {total_grads}\")\n",
+    "print(f\"Total Number of Dropouts: {total_drops}\")"
    ]
   },
   {
@@ -507,14 +413,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0bdb6139-8613-419c-b867-efc3dd652934",
-   "metadata": {},
-   "source": [
-    "Large majority of financially free students is likely due to the student sampling process conducted: it's likely that many students were attending international universities rather than in the U.S. where many students take on student loan debt (specifically universities in Portugal)."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "cadeb137-6caa-41d8-85bd-6e3ba4d4dab1",
@@ -654,6 +552,24 @@
     "plt.ylabel(\"Count\")\n",
     "plt.savefig(outputs_dir / \"Tuition_Fees_versus_Target.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e1b7db1-7169-43e7-bcb8-7fae2bc85f9e",
+   "metadata": {},
+   "source": [
+    "# Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32a5b2d6-ef76-4c87-a54a-d996037bb9de",
+   "metadata": {},
+   "source": [
+    "As we can see from our plots above, we have about 1.5 times the number of graduates as dropouts in our dataset. For those students, there does not appear to be any significant relationship between their \"Previous Qualification\" or \"Admission Grade\" and whether they would go on to graduate or drop out of school. We can also see that most of our students are around 20 years old, although they range from ages 18 to 70 years old. Also, it's worth noting that older students appeared more likely to drop out than younger students even though there wasn't an obviously strong relationship. Next we found that a vast majority of our students were financially free and up to date on tuition fees. This is likely due to the student sampling process conducted; it's likely that many students were attending international universities (specifically universities in Portugal) rather than in the U.S. where school is more expensive and many students take on student loan debt. Between these two variables we noticed that students who were behind on tuition fees were roughly, equally likely to be in debt or financially free, while students up to date on tuition fees were far more likely to be financially free. Ultimately, both variables had the strongest relationship with the students' likelihood to graduate. Students in debt or behind on tuition fees were more likely to drop out than they were to graduate.\n",
+    "\n",
+    "Given the information we gained through our exploratory analysis, we decided it best to move forward by focusing our regression analysis on the student factors we found most significant to our target variable. Those being: \"Age at Enrollment\", \"Debtor\", and \"Tuition Fees Up to Date\"."
    ]
   }
  ],
