--- a/regression_analysis.ipynb
+++ b/regression_analysis.ipynb
@@ -1,25 +1,188 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "6abd08f6-2932-40d2-8d27-0d48d61ac3de",
    "metadata": {},
+   "source": [
+    "# Logistic Regression Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9f8c624-01e3-4121-b93f-7a2655b6d18d",
+   "metadata": {},
+   "source": [
+    "In this notebook, we wanted to see how accurate of a logostic model we could make using our most significant variables from our exploratory analysis. The goal of this model is to predict whether a student will graduate given their age at enrollement, whether they're in debt, and whether they're up to date on their tuition fees. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ccb488c6-e805-42bc-8d58-de09e9a43ef3",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd \n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from pathlib import Path\n",
+    "data_dir = Path(\"data\")\n",
+    "outputs_dir = Path(\"outputs\")\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26e8489c-0c78-4e02-8aa0-eb12552b4e37",
+   "metadata": {},
+   "source": [
+    "# Loading and Cleaning Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "62e130f0-e59b-44b0-9f13-1b18bd64e482",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_13120/2869028448.py:9: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  model_sd[\"Target\"] = model_sd[\"Target\"].replace({\"Graduate\": 1, \"Dropout\": 0})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load data\n",
+    "student_data = pd.read_csv(data_dir/\"student_data.csv\", sep = \";\" )\n",
+    "# Select columns\n",
+    "model_sd = student_data[['Debtor', 'Age at enrollment', 'Tuition fees up to date', 'Target']]\n",
+    "# Remove enrolled students\n",
+    "model_sd = model_sd[model_sd[\"Target\"] != \"Enrolled\"]\n",
+    "\n",
+    "# Map Target column values\n",
+    "model_sd[\"Target\"] = model_sd[\"Target\"].replace({\"Graduate\": 1, \"Dropout\": 0})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cbff1e3-f978-4670-9ddc-fbb1c6575166",
+   "metadata": {},
+   "source": [
+    "# Building Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "135e71a4-0b99-46f0-bbc6-1c0641815397",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Separating Features and Target\n",
+    "X = model_sd.drop(\"Target\", axis = 1)\n",
+    "y = model_sd[\"Target\"]\n",
+    "\n",
+    "# Training and Test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 67)\n",
+    "\n",
+    "# Scale model variables\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "\n",
+    "# Train model\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Predictions\n",
+    "y_pred = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da575a47-e02a-44ee-a8d5-8ccfb97b6a63",
+   "metadata": {},
+   "source": [
+    "# Evaluate Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "083dfc78-b17c-4445-ad94-b34bf947d9c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7245179063360881\n",
+      "Confusion Matrix: [[119 181]\n",
+      " [ 19 407]]\n",
+      "Classification Report:               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.86      0.40      0.54       300\n",
+      "           1       0.69      0.96      0.80       426\n",
+      "\n",
+      "    accuracy                           0.72       726\n",
+      "   macro avg       0.78      0.68      0.67       726\n",
+      "weighted avg       0.76      0.72      0.70       726\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "matrix = confusion_matrix(y_test, y_pred)\n",
+    "report = classification_report(y_test, y_pred)\n",
+    "print(f\"Accuracy: {accuracy}\")\n",
+    "print(f\"Confusion Matrix: {matrix}\")\n",
+    "print(f\"Classification Report: {report}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e9b82bf-34b6-4e5b-9689-428137150d59",
+   "metadata": {},
+   "source": [
+    "# Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63f7e328-9908-436f-a22e-1c18eecbfa40",
+   "metadata": {},
+   "source": [
+    "With an accuracy of 72% our model proved capable but certainly not perfect. Our confusion matrix gave us a slightly more informative picture into where our model worked well: of all graduates, only 19 were misclassified as dropouts. On the other hand, our model misclassified more dropouts as graduates than it was able to correctly label. In other words, and as our precision and recall further confirm as well, our model was very good at identifying all true graduates but labeled too many students as graduates as a consequence. While these results are also certainly impacted by the randomness of our sampled data and the randomness of our training and test split while building our model, it left us with an informative conclusion: our selected student factors (age at enrollment, if they're a debtor, and if they're tuition fees are up to date) all are better for a model intended to predict if a student will graduate, rather than identify students at risk of dropping out of school. This conclusion is clear given our model's bias towards predicting a student will graduate, and failure to effectively find which students would go on to drop out of school."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Bash",
-   "language": "bash",
-   "name": "bash"
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "shell",
-   "file_extension": ".sh",
-   "mimetype": "text/x-sh",
-   "name": "bash"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
