--- a/main.ipynb
+++ b/main.ipynb
@@ -73,13 +73,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "id": "4895e92f-6472-4954-a517-322f03dc6129",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#### Main Regression?"
+    "#### Logistic Regression"
    ]
   },
   {
@@ -88,6 +86,14 @@
    "metadata": {},
    "source": [
     "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5b4a3d9-7647-4fe8-a536-d19d80e4b71d",
+   "metadata": {},
+   "source": [
+    "In conclusion, we were left with three main findings: (1) parental factors were far less informative than we originally imagined in predicting student outcomes, (2) students age at enrollment, whether they're in debt, and whether they're up to date on tuition fees were the most significant student factors out of all we had access to, and finally (3) these aforementioned student factors are better at predicting if a student will go on to graduate rather than identifying students at risk of dropping out of school, and altogether are still insufficient by themselves if one is interested in creating a truly significant model for determing the chance a new student will go on to dropout or graduate."
    ]
   },
   {
