Added to contributions

--- a/main.ipynb
+++ b/main.ipynb
@@ -65,6 +65,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b50bda7-9a0c-480e-8a92-dd0469c8092a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "eec47fb2-3ddd-4d28-a276-2322858110ad",
    "metadata": {},
@@ -117,7 +125,8 @@
    "id": "a2ada459-d58a-4231-b603-c0d559d561d8",
    "metadata": {},
    "source": [
-    "1. Found Dataset"
+    "1. Found Dataset\n",
+    "2. Created the MYST enviornment "
    ]
   },
   {
@@ -134,7 +143,10 @@
    "metadata": {},
    "source": [
     "1. Worked on 'student_analysis' Notebook\n",
-    "2. Created data folder, ai_documentation.txt, and Notebooks."
+    "2. Created data folder, ai_documentation.txt, and Notebooks.\n",
+    "3. Did outline of main.ipynb and worked on it\n",
+    "4. Organized git repo\n",
+    "5. Contributed to ai_documentation.txt"
    ]
   },
   {
@@ -151,7 +163,10 @@
    "metadata": {},
    "source": [
     "1. Worked on 'parent_analysis' Notebook\n",
-    "2. Created outputs folder"
+    "2. Created outputs folder\n",
+    "3. Created utils.py\n",
+    "4. Created the tests used for the functions in test_utils.py\n",
+    "5. Contributed to the ai_documentation.txt"
    ]
   }
  ],
