Updating both main.ipynb and parent_eda.ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -50,6 +50,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "334e58a4-b867-46bc-8520-07cdda3549c4",
+   "metadata": {},
+   "source": [
+    "We first cleaned the data by only including columns that we would be analyzing, which included 'Admission grade', 'Target', and 'Tuition fees up to date', amognst others. We then removed the 794 students who were \"Enrolled\", as we had decided to focus on students who had already graduated or dropped out. After this we recategorized the 29 different parental \"qualifications\" into 12 new categories. After this, we decided to focus on 5 of the 12 categories, creating new data frames in the process."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6ee101cc-1de5-4edd-96d5-ccffd0332d46",
    "metadata": {},
    "source": [
@@ -65,12 +73,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "5b50bda7-9a0c-480e-8a92-dd0469c8092a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Something that intrigued us when looking at this dataset were the two columns titled \"Mother's qualificaton\", and \"Father's qualification\", columns that told us both parent's education level. We at first hypothesized that the parent's education level would affect some student factors, however after doing some EDA and creating some figures, located in the parent_eda notebook, we saw that the parent's education level surprisingly didn't affect the student in terms of their graduation rate, tuition fees, debt, age at enrollment, or the qualification and admission grade. We only saw a small variation when examining scholarship rates, however the data wasn't strong enough to go ahead and conduct a logistic regression. "
+   ]
   },
   {
    "cell_type": "markdown",
