--- a/parent_eda.ipynb
+++ b/parent_eda.ipynb
@@ -1033,7 +1033,12 @@
    "id": "15ef42c1-fb35-4063-807d-343ab6daaf37",
    "metadata": {},
    "source": [
-    "Based on the value counts, we will be analyzing \"Some Level of Elementary School Education\" (Code 2), \"Elementary School (Complete)\" (Code 3), \"Middle School Education (Completed)\" (Code 4), \"High School (Completed)\" (Code 5), and \"Completed Bachelors\" (Code 7). "
+    "Based on the value counts, we will be analyzing  \n",
+    "\"Some Level of Elementary School Education\" (Code 2)  \n",
+    "\"Elementary School (Complete)\" (Code 3)  \n",
+    "\"Middle School Education (Completed)\" (Code 4)  \n",
+    "\"High School (Completed)\" (Code 5)  \n",
+    "\"Completed Bachelors\" (Code 7)  "
    ]
   },
   {
