Adding Allison contributions

--- a/main.ipynb
+++ b/main.ipynb
@@ -134,7 +134,9 @@
    "metadata": {},
    "source": [
     "1. Found Dataset\n",
-    "2. Created the MYST enviornment "
+    "2. Created the MYST enviornment\n",
+    "3. Created Binder\n",
+    "4. Contributed to ai_documentation.txt"
    ]
   },
   {
